--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,18 @@ kv_namespaces = [
 ]
 [site]
 bucket = "./static/dist"
+
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = true
+persist = true
+head_sampling_rate = 1
